--- a/Toilet Radar/View/DestinationInfoView/Base.lproj/DestinationInfoView.xib
+++ b/Toilet Radar/View/DestinationInfoView/Base.lproj/DestinationInfoView.xib
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -187,7 +188,7 @@
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="K8u-VW-F5n" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="2AI-MB-IGp"/>
                 <constraint firstItem="2Oy-Px-uhI" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="7fk-Py-1Zg"/>
@@ -223,5 +224,8 @@
     <resources>
         <image name="distance_a_to_b" width="57" height="65"/>
         <image name="figure_walk" width="28" height="45.333332061767578"/>
+        <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
